--- a/Kozmeticki salon/css/styles.css
+++ b/Kozmeticki salon/css/styles.css
@@ -629,14 +629,14 @@ progress {
 .container,
 div.container4 {
   height: 10em;
-  position: relative },
+  position: relative }
 .container2{
   width: 100%;
   padding-right: var(--bs-gutter-x, 0.75rem);
   padding-left: var(--bs-gutter-x, 0.75rem);
   margin-right: auto;
   margin-left: auto;
-},
+}
 div.container4 p {
   margin: 0;
   background: yellow;
@@ -644,7 +644,7 @@ div.container4 p {
   top: 50%;
   left: 50%;
   margin-right: -50%;
-  transform: translate(-50%, -50%) },
+  transform: translate(-50%, -50%) }
 .container-fluid,
 .container-xxl,
 .container-xl,
